Ran program. Added sources from Portland, Oregan.

--- a/news_scraper.ipynb
+++ b/news_scraper.ipynb
@@ -71,6 +71,7 @@
    "outputs": [],
    "source": [
     "def cbs_kpix_scraper():\n",
+    "    # San Francisco, CA\n",
     "    cbs_kpix_sf = urlopen('https://sanfrancisco.cbslocal.com/category/news/')\n",
     "    cbs_kpix_soup = BeautifulSoup(cbs_kpix_sf, 'html.parser')\n",
     "    titles = cbs_kpix_soup.find_all('strong', class_='title')\n",
@@ -94,6 +95,7 @@
    "outputs": [],
    "source": [
     "def the_sfnews_scraper():\n",
+    "    # San Francisco, CA\n",
     "    the_sfnews = urlopen('https://www.thesfnews.com/')\n",
     "    the_sfnews_soup = BeautifulSoup(the_sfnews, 'html.parser')\n",
     "    titles = the_sfnews_soup.find_all('a', class_='td-image-wrap')\n",
@@ -122,6 +124,7 @@
    "outputs": [],
    "source": [
     "def kswb_fox_5_scraper():\n",
+    "    ### San Diego, CA\n",
     "    kswb_fox_5_sd = urlopen('https://fox5sandiego.com/')\n",
     "    kswb_fox_5_soup = BeautifulSoup(kswb_fox_5_sd, 'html.parser')\n",
     "    titles = kswb_fox_5_soup.find_all('h3', class_='article-list__article-title')\n",
@@ -171,7 +174,7 @@
    ],
    "source": [
     "def nbc7_san_diego_scraper():\n",
-    "\n",
+    "    ### San Diego, CA\n",
     "    nbc7_san_diego = urlopen('https://www.nbcsandiego.com/news/local/')\n",
     "    nbc7_san_diego_soup = BeautifulSoup(nbc7_san_diego, 'html.parser') \n",
     "    titles = nbc7_san_diego_soup.find_all('h3', class_='story-card__title')\n",
@@ -179,36 +182,137 @@
     "    articles = []\n",
     "\n",
     "    for title in titles:\n",
-    "        print(title.text.rstrip().lstrip())"
+    "        print(title.text.rstrip().lstrip())\n",
+    "        \n",
+    "    articles = list(set(articles))   \n",
+    "    \n",
+    "    return articles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SDUT op-ed details Port of San Diego's efforts to attract new maritime investments\n",
+      "San Diego City Council extends shelter operation at convention center\n",
+      "More than $90k in scholarships available for San Diego & Riverside County students\n",
+      "San Diego County Supervisors overturn ban on needle exchange program\n",
+      "Senator partners with San Diego DA on legislation to keep SVP hearings public\n",
+      "Coach Jason Carter wants to see action from our government to resume sports\n",
+      "California to take more control over slow vaccine delivery\n",
+      "FBI requests public assistance to identify Scripps Ranch bank robber\n",
+      "Rock N Hair Salon excited and relieved to be able to rebuild their business\n",
+      "Owner of The DOT Cocktail Lounge says our government is leaving small businesses behind\n",
+      "Coach Gardinera gives an update on resuming youth sports in CA\n",
+      "San Diego Area can expect calmer conditions between storms\n",
+      "San Diego Council to vote on eviction moratorium Tuesday\n",
+      "Mayor Gloria signs executive action capping third-party food delivery fees at 18%\n",
+      "Former Mayor Faulconer slams Newsom for using lockdowns for political gain\n",
+      "Carlsbad business owners react to Newsom lifting stay-at-home order\n",
+      "10pm curfew for restaurants will remain in place for San Diego County\n",
+      "State establishes COVID vaccine notification website in LA, SD Counties\n",
+      "Newsom: Science, not politics, dictates lifting of stay-at-home orders\n",
+      "El Cajon Mayor Bill Wells reacts to California lifting stay at home order\n",
+      "Rescue CA continues efforts to recall Governor Gavin Newsom\n",
+      "An Oceanside vaccination center opens on Sunday\n",
+      "Makua Rothman's epic 100 foot wave ride at Jaws\n",
+      "Adopt 2-month-old Tomato from Helen Woodward Animal Center\n",
+      "Rancho Santa Fe Fire Captain dies of complications from COVID-19\n",
+      "Detailing the impact of President Biden's immigration reform policies on San Diego County\n",
+      "San Diego Symphony launches special 2021 digital season\n",
+      "Rock N Hair Salon excited and relieved to be able to rebuild their business\n",
+      "Attorney Michael Curran says lifting stay at home order isn't enough to help businesses\n",
+      "California State Senator Melissa Melendez share reaction to Newsom’s decision to lift stay-at-home orders.\n",
+      "Owner of The DOT Cocktail Lounge says our government is leaving small businesses behind\n",
+      "Trump impeachment goes to Senate, testing his sway over GOP\n",
+      "Coach Gardinera gives an update on resuming youth sports in CA\n",
+      "San Diego Council to vote on eviction moratorium Tuesday\n"
+     ]
+    }
+   ],
+   "source": [
+    "def kusi_scraper():\n",
+    "    ### San Diego, CA\n",
+    "    kusi = urlopen('https://www.kusi.com/local-san-diego-news/')\n",
+    "    kusi_soup = BeautifulSoup(kusi, 'html.parser')\n",
+    "    titles = kusi_soup.find_all('h3', class_='entry-title')\n",
+    "\n",
+    "    articles = []\n",
+    "\n",
+    "    for title in titles:\n",
+    "        print(title.text)\n",
+    "        \n",
+    "    articles = list(set(articles))\n",
+    "    \n",
+    "    return articles"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"What you need to know about California's new age-based vaccination system\", 'San Diego business owners scramble to reopen after governor lifts stay-at-home order', 'CA Gov. Newsom criticized for timing with lifting stay-at-home order', 'Sen. Patrick Leahy, Trump trial presiding officer, back home after hospital visit', 'San Diego City Council extends eviction moratorium for tenants, small businesses', 'Baseball Hall of Fame elects no players for Class of 2021', 'Smaller investors face down hedge funds, as GameStop soars', 'Biden calls for end to federal use of private prisons', 'Imperial County grapples with limited COVID-19 vaccine supply', 'Senate Republicans largely vote against holding Trump impeachment trial', 'San Diego City Council extends Shelter Operation at Convention Center', 'Hit-and-run driver injures Fallbrook animal shelter volunteer, kills rescue dog', 'Biden administration to boost COVID-19 vaccine supply amid shortages']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cbs8_sd_scaper():\n",
+    "    ###CBS 8 - San Diego\n",
+    "    cbs8 = urlopen('https://www.cbs8.com/')\n",
+    "    cbs8_soup = BeautifulSoup(cbs8, 'html.parser')\n",
+    "    titles = cbs8_soup.find_all('a', class_='headline-list__title')\n",
+    "\n",
+    "    articles = []\n",
+    "\n",
+    "    for title in titles:\n",
+    "        articles.append(title.text)\n",
+    "    \n",
+    "    articles = list(set(articles))\n",
+    "\n",
+    "    return articles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Portland"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thousands of Portland-area health care workers may have to wait months for COVID-19 vaccineThousands of Portland-area health care workers may have to wait months for COVID-19 vaccine28m agoAndrew Theen | The Oregonian/OregonLive\n",
+      "Subscriber ExclusiveKeyKey that denotes Subscriber Exclusive content.Police chief proposes recreating uniformed patrol team to work with on-call investigators to stem Portland’s gun violencePolice chief proposes recreating uniformed patrol team to work with on-call investigators to stem Portland’s gun violence1h agoMaxine Bernstein | The Oregonian/OregonLive\n"
+     ]
+    }
+   ],
+   "source": [
+    "oregonlive = urlopen('https://www.oregonlive.com/portland/')\n",
+    "oregonlive_soup = BeautifulSoup(oregonlive, 'html.parser')\n",
+    "titles = oregonlive_soup.find_all('article', class_='two-box-item')\n",
+    "\n",
+    "articles = []\n",
+    "\n",
+    "for title in titles:\n",
+    "    print(title.text)"
+   ]
   },
   {
    "cell_type": "markdown",
