Updated Jupyter Notebook to sep. Scraping and Modeling.

--- a/news_scraper_sandbox.ipynb
+++ b/news_scraper_sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -123,264 +123,170 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### San Francisco"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cbs_kpix_scraper():\n",
-    "    # San Francisco, CA\n",
-    "    cbs_kpix_sf = urlopen('https://sanfrancisco.cbslocal.com/category/news/')\n",
-    "    cbs_kpix_soup = BeautifulSoup(cbs_kpix_sf, 'html.parser')\n",
-    "    titles = cbs_kpix_soup.find_all('strong', class_='title')\n",
-    "\n",
-    "    articles = []\n",
-    "\n",
-    "    for title in titles:\n",
-    "        check = title.text.split(' ')\n",
-    "        if len(check) > 4:\n",
-    "            articles.append(title.text)\n",
-    "            \n",
-    "    articles = list(set(articles))\n",
-    "        \n",
-    "    return articles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def the_sfnews_scraper():\n",
-    "    # San Francisco, CA\n",
-    "    the_sfnews = urlopen('https://www.thesfnews.com/')\n",
-    "    the_sfnews_soup = BeautifulSoup(the_sfnews, 'html.parser')\n",
-    "    titles = the_sfnews_soup.find_all('a', class_='td-image-wrap')\n",
-    "\n",
-    "    articles = []\n",
-    "\n",
-    "    for title in titles:\n",
-    "        articles.append(title['title'])\n",
-    "    \n",
-    "    articles = list(set(articles))\n",
-    "    \n",
-    "    return articles"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### San Diego"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def kswb_fox_5_scraper():\n",
-    "    ### San Diego, CA\n",
-    "    kswb_fox_5_sd = urlopen('https://fox5sandiego.com/')\n",
-    "    kswb_fox_5_soup = BeautifulSoup(kswb_fox_5_sd, 'html.parser')\n",
-    "    titles = kswb_fox_5_soup.find_all('h3', class_='article-list__article-title')\n",
-    "\n",
-    "    articles = []\n",
-    "\n",
-    "    for title in titles:\n",
-    "        if len(title) > 2:\n",
-    "            articles.append(title.text.rstrip().lstrip())\n",
-    "    \n",
-    "    articles = list(set(articles))   \n",
-    "    \n",
-    "    return articles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Latest Coronavirus Impacts:  Stay-Home Order, Curfew Lifted; Some Sports, Live Entertainment Return\n",
-      "CVFD Battling Building Fire\n",
-      "Heavy Snow, Hail and High Winds: Winter Storm Blows Through San Diego\n",
-      "Will A UV Light Device Kill Coronavirus?\n",
-      "Grandmother Dies Battling COVID-19, Daughter Vows to Raise Awareness In Her Memory\n",
-      "California Measure Aims to Pay Off 80% of Most Unpaid Rent\n",
-      "Winter Weather Batters County as Restaurants Prep for Return of Outdoor Dining\n",
-      "Photos: Winter Storm Batters San Diego County With Trifecta of Snow, Wind and Rain\n",
-      "Legion to Call Vegas Home for 2021 MLR Season\n",
-      "Gulls Roster Flush With Top Prospects\n",
-      "San Diego Zoo Safari Park Gorilla Troop Recovering From COVID-19\n",
-      "SD Humane Society Begins Wildlife Baby Shower To Help Animals This Spring\n",
-      "San Diego Family's Warning as COVID-19 Deaths Continue Rising\n",
-      "Search Warrant Served at Home of Missing Chula Vista Mom\n",
-      "Study Suggests Those With Severe COVID-19 Symptoms Have Better Chance of Fighting Reinfection\n",
-      "Sign Language Interpreter Who Served Hawaiians During Pandemic Dies From Coronavirus in San Diego\n",
-      "Two People Hospitalized After Bar Fight in El Cajon\n",
-      "Traffic Snarls in National City After Big Rig Hits Center Divider, Minivan on I-805\n",
-      "U.S. Will Require Negative COVID-19 Results From Airline Passengers Prior to Arrival\n",
-      "San Diego County Sheriff's Department Continues Search for Man Missing Since Dec. 23\n"
-     ]
-    }
-   ],
-   "source": [
-    "def nbc7_san_diego_scraper():\n",
-    "    ### San Diego, CA\n",
-    "    nbc7_san_diego = urlopen('https://www.nbcsandiego.com/news/local/')\n",
-    "    nbc7_san_diego_soup = BeautifulSoup(nbc7_san_diego, 'html.parser') \n",
-    "    titles = nbc7_san_diego_soup.find_all('h3', class_='story-card__title')\n",
-    "\n",
-    "    articles = []\n",
-    "\n",
-    "    for title in titles:\n",
-    "        print(title.text.rstrip().lstrip())\n",
-    "        \n",
-    "    articles = list(set(articles))   \n",
-    "    \n",
-    "    return articles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SDUT op-ed details Port of San Diego's efforts to attract new maritime investments\n",
-      "San Diego City Council extends shelter operation at convention center\n",
-      "More than $90k in scholarships available for San Diego & Riverside County students\n",
-      "San Diego County Supervisors overturn ban on needle exchange program\n",
-      "Senator partners with San Diego DA on legislation to keep SVP hearings public\n",
-      "Coach Jason Carter wants to see action from our government to resume sports\n",
-      "California to take more control over slow vaccine delivery\n",
-      "FBI requests public assistance to identify Scripps Ranch bank robber\n",
-      "Rock N Hair Salon excited and relieved to be able to rebuild their business\n",
-      "Owner of The DOT Cocktail Lounge says our government is leaving small businesses behind\n",
-      "Coach Gardinera gives an update on resuming youth sports in CA\n",
-      "San Diego Area can expect calmer conditions between storms\n",
-      "San Diego Council to vote on eviction moratorium Tuesday\n",
-      "Mayor Gloria signs executive action capping third-party food delivery fees at 18%\n",
-      "Former Mayor Faulconer slams Newsom for using lockdowns for political gain\n",
-      "Carlsbad business owners react to Newsom lifting stay-at-home order\n",
-      "10pm curfew for restaurants will remain in place for San Diego County\n",
-      "State establishes COVID vaccine notification website in LA, SD Counties\n",
-      "Newsom: Science, not politics, dictates lifting of stay-at-home orders\n",
-      "El Cajon Mayor Bill Wells reacts to California lifting stay at home order\n",
-      "Rescue CA continues efforts to recall Governor Gavin Newsom\n",
-      "An Oceanside vaccination center opens on Sunday\n",
-      "Makua Rothman's epic 100 foot wave ride at Jaws\n",
-      "Adopt 2-month-old Tomato from Helen Woodward Animal Center\n",
-      "Rancho Santa Fe Fire Captain dies of complications from COVID-19\n",
-      "Detailing the impact of President Biden's immigration reform policies on San Diego County\n",
-      "San Diego Symphony launches special 2021 digital season\n",
-      "Rock N Hair Salon excited and relieved to be able to rebuild their business\n",
-      "Attorney Michael Curran says lifting stay at home order isn't enough to help businesses\n",
-      "California State Senator Melissa Melendez share reaction to Newsom’s decision to lift stay-at-home orders.\n",
-      "Owner of The DOT Cocktail Lounge says our government is leaving small businesses behind\n",
-      "Trump impeachment goes to Senate, testing his sway over GOP\n",
-      "Coach Gardinera gives an update on resuming youth sports in CA\n",
-      "San Diego Council to vote on eviction moratorium Tuesday\n"
-     ]
-    }
-   ],
-   "source": [
-    "def kusi_scraper():\n",
-    "    ### San Diego, CA\n",
-    "    kusi = urlopen('https://www.kusi.com/local-san-diego-news/')\n",
-    "    kusi_soup = BeautifulSoup(kusi, 'html.parser')\n",
-    "    titles = kusi_soup.find_all('h3', class_='entry-title')\n",
-    "\n",
-    "    articles = []\n",
-    "\n",
-    "    for title in titles:\n",
-    "        print(title.text)\n",
-    "        \n",
-    "    articles = list(set(articles))\n",
-    "    \n",
-    "    return articles"
+    "### Data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\"What you need to know about California's new age-based vaccination system\", 'San Diego business owners scramble to reopen after governor lifts stay-at-home order', 'CA Gov. Newsom criticized for timing with lifting stay-at-home order', 'Sen. Patrick Leahy, Trump trial presiding officer, back home after hospital visit', 'San Diego City Council extends eviction moratorium for tenants, small businesses', 'Baseball Hall of Fame elects no players for Class of 2021', 'Smaller investors face down hedge funds, as GameStop soars', 'Biden calls for end to federal use of private prisons', 'Imperial County grapples with limited COVID-19 vaccine supply', 'Senate Republicans largely vote against holding Trump impeachment trial', 'San Diego City Council extends Shelter Operation at Convention Center', 'Hit-and-run driver injures Fallbrook animal shelter volunteer, kills rescue dog', 'Biden administration to boost COVID-19 vaccine supply amid shortages']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def cbs8_sd_scaper():\n",
-    "    ###CBS 8 - San Diego\n",
-    "    cbs8 = urlopen('https://www.cbs8.com/')\n",
-    "    cbs8_soup = BeautifulSoup(cbs8, 'html.parser')\n",
-    "    titles = cbs8_soup.find_all('a', class_='headline-list__title')\n",
-    "\n",
-    "    articles = []\n",
-    "\n",
-    "    for title in titles:\n",
-    "        articles.append(title.text)\n",
-    "    \n",
-    "    articles = list(set(articles))\n",
-    "\n",
-    "    return articles"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Portland"
+    "db = dbc.show_all_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Thousands of Portland-area health care workers may have to wait months for COVID-19 vaccineThousands of Portland-area health care workers may have to wait months for COVID-19 vaccine28m agoAndrew Theen | The Oregonian/OregonLive\n",
-      "Subscriber ExclusiveKeyKey that denotes Subscriber Exclusive content.Police chief proposes recreating uniformed patrol team to work with on-call investigators to stem Portland’s gun violencePolice chief proposes recreating uniformed patrol team to work with on-call investigators to stem Portland’s gun violence1h agoMaxine Bernstein | The Oregonian/OregonLive\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>source</th>\n",
+       "      <th>day</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama adds 754 confirmed coronavirus casesTh...</td>\n",
+       "      <td>al.com</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>2020-09-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Whitmire: LGBTQ charter school rejection is un...</td>\n",
+       "      <td>al.com</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>2020-09-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Trump to announce Supreme Court pick on Friday...</td>\n",
+       "      <td>al.com</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>2020-09-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama reserve cornerback suffers arm injuryH...</td>\n",
+       "      <td>al.com</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>2020-09-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The 2020 Alabama football depth chart3h</td>\n",
+       "      <td>al.com</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>2020-09-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12065</th>\n",
+       "      <td>Army changes new fitness exam, kicks out requi...</td>\n",
+       "      <td>https://www.king5.com/</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>2021-03-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12066</th>\n",
+       "      <td>Children's picture book on Dr. Anthony Fauci s...</td>\n",
+       "      <td>https://www.king5.com/</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>2021-03-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12067</th>\n",
+       "      <td>Elgin Baylor, silky-smooth Lakers Hall of Fame...</td>\n",
+       "      <td>https://www.king5.com/</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>2021-03-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12068</th>\n",
+       "      <td>March Madness upsets tracker: No. 7 Oregon ups...</td>\n",
+       "      <td>https://www.king5.com/</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>2021-03-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12069</th>\n",
+       "      <td>IRS: Next batch of stimulus payments coming th...</td>\n",
+       "      <td>https://www.king5.com/</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>2021-03-22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12070 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   title  \\\n",
+       "0      Alabama adds 754 confirmed coronavirus casesTh...   \n",
+       "1      Whitmire: LGBTQ charter school rejection is un...   \n",
+       "2      Trump to announce Supreme Court pick on Friday...   \n",
+       "3      Alabama reserve cornerback suffers arm injuryH...   \n",
+       "4                The 2020 Alabama football depth chart3h   \n",
+       "...                                                  ...   \n",
+       "12065  Army changes new fitness exam, kicks out requi...   \n",
+       "12066  Children's picture book on Dr. Anthony Fauci s...   \n",
+       "12067  Elgin Baylor, silky-smooth Lakers Hall of Fame...   \n",
+       "12068  March Madness upsets tracker: No. 7 Oregon ups...   \n",
+       "12069  IRS: Next batch of stimulus payments coming th...   \n",
+       "\n",
+       "                       source     day        date  \n",
+       "0                      al.com  Monday  2020-09-21  \n",
+       "1                      al.com  Monday  2020-09-21  \n",
+       "2                      al.com  Monday  2020-09-21  \n",
+       "3                      al.com  Monday  2020-09-21  \n",
+       "4                      al.com  Monday  2020-09-21  \n",
+       "...                       ...     ...         ...  \n",
+       "12065  https://www.king5.com/  Monday  2021-03-22  \n",
+       "12066  https://www.king5.com/  Monday  2021-03-22  \n",
+       "12067  https://www.king5.com/  Monday  2021-03-22  \n",
+       "12068  https://www.king5.com/  Monday  2021-03-22  \n",
+       "12069  https://www.king5.com/  Monday  2021-03-22  \n",
+       "\n",
+       "[12070 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "oregonlive = urlopen('https://www.oregonlive.com/portland/')\n",
-    "oregonlive_soup = BeautifulSoup(oregonlive, 'html.parser')\n",
-    "titles = oregonlive_soup.find_all('article', class_='two-box-item')\n",
-    "\n",
-    "articles = []\n",
-    "\n",
-    "for title in titles:\n",
-    "    print(title.text)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Data"
+    "pd.DataFrame(db, columns=['title', 'source', 'day', 'date'])"
    ]
   },
   {
